# gas-studentt

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
experiments/: dgp.py  dgp_MC.py  real_data.py
gas_studentt/core/: fisher.py  gas_filter_numba.py  score.py
gas_studentt/utils/: constraints.py  visualization.py
models/: gas_studentt_multivariate.py
project/core/: cholesky.py  scaling.py  student_t.py
project/utils/: config.py  diagnostics.py
workflows/: publish.yml
